--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,13 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Заголовок первого уровня</h1>
+        <h2>Заголовок второго уровня</h2>
+        <ol>
+            <li><a href="https://vk.com/">VK</a></li>
+            <li><a href="https://github.com/">GitHub</a></li>
+            <li><a href="https://youtube.com/">YouTube</a></li>
+        </ol>
+    </body>
 </html>
